--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pickprops",
+  "name": "prop-pick",
   "version": "1.0.0",
   "description": "The easiest way to filter properties from an object",
   "main": "index.js",
