--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "prop-pick",
-  "version": "1.0.5",
-  "description": "The easiest way to filter an object properties",
+  "version": "1.0.7",
+  "description": "The easiest way to filter properties from an object",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
