--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prop-pick",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "The easiest way to filter properties from an object",
   "main": "index.js",
   "scripts": {
@@ -11,16 +11,21 @@
     "url": "git+https://github.com/romulorvs/prop-pick.git"
   },
   "keywords": [
-    "pick",
+    "filter",
     "properties",
-    "picker",
-    "destructuring",
-    "object"
+    "object",
+    "attributes",
+    "props",
+    "pick",
+    "picker"
   ],
   "author": "RomuloVS",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/romulorvs/prop-pick"
   },
-  "homepage": "https://github.com/romulorvs/prop-pick"
+  "homepage": "https://github.com/romulorvs/prop-pick",
+  "devDependencies": {
+    "jest": "^26.6.3"
+  }
 }
