--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The easiest way to filter properties from an object",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
