--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "prop-pick",
   "version": "1.2.1",
-  "description": "The easiest way to filter properties from an object",
+  "description": "A tool that helps you filter properties from an object",
   "main": "index.js",
   "scripts": {
     "test": "jest"
