--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prop-pick",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "A tool that helps you filter properties from an object",
   "main": "index.js",
   "scripts": {
@@ -12,9 +12,11 @@
   },
   "keywords": [
     "filter",
+    "rename",
     "properties",
     "object",
     "attributes",
+    "renaming",
     "props",
     "pick",
     "picker"
